feat: add action hints to actions
change the types

add http status

resolve name clashing

build TS

add hints to test objects
