# openapi/spec.yml
@@ -385,6 +385,8 @@ components:
           items:
             $ref: '#/components/schemas/ActionParameter'
           uniqueItems: true
+        hint:
+          $ref: '#/components/schemas/ActionHint'
         widgets:
           $ref: '#/components/schemas/Widgets'
         metrics:
@@ -431,6 +433,20 @@ components:
           description: Target attribute key from which the possible parameter options are gathered.
       required:
         - attribute
+    ActionHint:
+      properties:
+        type:
+          type: string
+          enum:
+            - 'hint_info'
+            - 'hint_warning'
+          description: Will be used in the product UI to display the hint in a different color and with a different icon.
+        content:
+          type: string
+          description: The actual hint text (can contain markdown). Will be displayed in the product UI when configuring the action.
+      required:
+        - type
+        - content
     ActionParameter:
       properties:
         label:
@@ -494,6 +510,8 @@ components:
           items:
             type: string
           uniqueItems: true
+        hint:
+          $ref: '#/components/schemas/ActionHint'
       required:
         - label
         - name
